[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynvim"
version = "0.6.0"
description = "Python client for Neovim"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Neovim Authors" }
]
requires-python = ">=3.7"
dependencies = [
    "msgpack>=1.0.0",
    "greenlet>=3.0; python_implementation != 'PyPy'",
    "typing-extensions>=4.5; python_version < '3.12'",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-timeout",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
pynvim-python = "pynvim.python:main"

[project.urls]
Homepage = "https://github.com/neovim/pynvim"
Download = "https://github.com/neovim/pynvim/archive/0.6.0.tar.gz"
Documentation = "https://pynvim.readthedocs.io"
