[metadata]
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache License
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: Android
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

long_description = file: README.md, LICENSE
long_description_content_type=text/markdown
keywords = nvim, vim, pynvim
platforms = any
test_suite = test

[options]
include_package_data = True

[aliases]
test = pytest

[flake8]
extend-ignore = D211,E731,D401,W503
max-line-length = 88
per-file-ignores =
  test/*:D1
application-import-names = pynvim

[isort]
known_first_party = pynvim

[tool:pytest]
testpaths = test
timeout = 10
